correctly display spinner

--- a/client/home.html
+++ b/client/home.html
@@ -36,6 +36,7 @@
 								<li class="mdl-list__item">Time Management</li>
 								<li class="mdl-list__item">Trigger Awareness</li>
 								<li class="mdl-list__item">Relapse Prevention</li>
+                <li class="mdl-list__item">And More!</li>
 							</ul>
 						</li>
 					</ul>
