--- a/client/worksheet.html
+++ b/client/worksheet.html
@@ -1304,7 +1304,7 @@
 			<li class="mdl-list__item"><a target="_blank" href="http://atforum.com/documents/english/Telling_others_about_MMT.pdf">Brochure on suggestions about telling others about participation in MMT.</a></li>
 			<li class="mdl-list__item"><a target="_blank" href="http://store.samhsa.gov/product/Medication-Assisted-Treatment-for-Opioid-Addiction-Facts-for-Families-and-Friends/SMA15-4443">MAT for Opioid Addiction: Facts for Family & Friends</a></li>
 			<li class="mdl-list__item"><a target="_blank" href="http://ncadd.org/images/stories/PDF/Consumer-Guide-Medication-Assisted-Recovery.pdf">NCADD's PDF</a></li>
-			<li class="mdl-list__item"><a target="_blank" href="http://store.samhsa.gov/product/Follow-Directions-How-to-Use-Methadone-Safely/SMA09-4409">SAMHSA's brochure describes the use of methadone in medication-assisted treatment of addiction to heroin and other opioids, including narcotic pain medicines. Describes how to use methadone safely, the dangers of methadone overdose, and life-threatening methadone side effects. </a></li>
+			<li class="mdl-list__item"><a target="_blank" href="http://store.samhsa.gov/product/Follow-Directions-How-to-Use-Methadone-Safely/SMA09-4409">SAMHSA's Methadone brochure</a></li>
 			<li class="mdl-list__item"><a target="_blank" href="http://www.naabt.org/documents/EmergencyCard.pdf">NAABT resources - Emergency Card</a></li>
 			<li class="mdl-list__item"><a target="_blank" href="http://www.aafp.org/afp/2003/1115/p1971.html">Common Problems in Patients Recovering from Chemical Dependency</a></li>
 			<li class="mdl-list__item"><a target="_blank" href="https://www.youtube.com/playlist?list=PLAWzAhT15N-qurIyzUG8bI8OHA1w80utI">Recovery Month stories of recovery</a></li>
